traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:6: error: type mismatch;
 found   : Unit
 required: Boolean
    zigzag=tp(zigzag)
             ^TraversalZigZag:22: error: not enough arguments for method setY: (x$1: Int)Unit.
Unspecified value parameter x$1.
    setPos(getX(),setY()+1)
                      ^TraversalZigZag:23: warning: enclosing method tp has result type Unit: return value discarded
    return (!zigzag)
    ^TraversalZigZag:32: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return (zigzag)
          ^TraversalZigZag:32: warning: enclosing method tp has result type Unit: return value discarded
  return (zigzag)
  ^