traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var cpt:Int=0
  var zigzag:Boolean=false
  while (!fini()){
    ecritMessage(cpt)
    cpt += 1
    zigzag=tp(zigzag)
  }
  ecritMessage(cpt)  
}

def fini():Boolean = {
  return (getX()==getMondeLargeur()-1 && getY()==getMondeHauteur()-1)
} 

def extrem(zigzag:Boolean):Boolean={
  if (zigzag){return (getX()==0)}
  else {return return (getX()==getMondeLargeur()-1)}
}

def tp(zigzag:Boolean){
  if(extrem(zigzag)){
    setPos(getX(),setY()+1)
    return (!zigzag)
    
  }
  if (zigzag){
    setPos(getX()-1,getY())
  }
  else {
    setPos(getX()+1,getY())
  }
  return (zigzag)
}